--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "@tanstack/react-router": "^1.62.0",
     "@tanstack/react-table": "^8.20.5",
     "@tanstack/router-zod-adapter": "^1.62.0",
+    "@tanstack/zod-adapter": "^1.112.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
