--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,13 +58,27 @@ services:
     networks:
       - metanet1
     ports: 
-    - 8000:8000
+      - 8000:8000
+  frontend:
+    build: ./frontend
+    # labels:
+    #   - "traefik.enable=true"
+    #   - "traefik.http.routers.frontend.rule=Host(`185.170.153.129`)"
+    #   - "traefik.http.routers.frontend.entrypoints=websecure"
+    #   - "traefik.http.routers.frontend.tls.certresolver=myresolver"
+    #   - "traefik.http.services.frontend.loadbalancer.server.port=3000"
+    networks:
+      - metanet1
+    ports:
+      - 3001:3000
+    depends_on:
+      - fastapi
   redis:
     image: redis
     networks:
       - metanet1
     ports:
-    - 6379:6379
+      - 6379:6379
 
 
 volumes:
